--- a/content/_layouts/default.html
+++ b/content/_layouts/default.html
@@ -33,34 +33,33 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Open navigation</span>
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">Damian Zaremba</a>
         </div>
-        <div id="navbar">
-          <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li class="{% if page.url != '/about/' and page.url != '/cv/' and page.url != '/archive/' and page.url != '/projects/' and page.url != '/todo/' %}active{% endif %}"><a href="/">Blog</a></li>
-              <li class="{% if page.url == '/about/' %}active{% endif %}"><a href="/about/">About</a></li>
-              <li class="{% if page.url == '/cv/' %}active{% endif %}"><a href="/cv/">CV</a></li>
-              <li class="{% if page.url == '/archive/' %}active{% endif %}"><a href="/archive/">Archive</a></li>
-              <li class="{% if page.url == '/projects/' %}active{% endif %}"><a href="/projects/">Projects</a></li>
-              <li class="{% if page.url == '/todo/' %}active{% endif %}"><a href="/todo/">Todo</a></li>
-            </ul>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="{% if page.url != '/about/' and page.url != '/cv/' and page.url != '/archive/' and page.url != '/projects/' and page.url != '/todo/' %}active{% endif %}"><a href="/">Blog</a></li>
+            <li class="{% if page.url == '/about/' %}active{% endif %}"><a href="/about/">About</a></li>
+            <li class="{% if page.url == '/cv/' %}active{% endif %}"><a href="/cv/">CV</a></li>
+            <li class="{% if page.url == '/archive/' %}active{% endif %}"><a href="/archive/">Archive</a></li>
+            <li class="{% if page.url == '/projects/' %}active{% endif %}"><a href="/projects/">Projects</a></li>
+            <li class="{% if page.url == '/todo/' %}active{% endif %}"><a href="/todo/">Todo</a></li>
+          </ul>
 
-            <div class="social-icons navbar-right">
-              <a href="http://twitter.com/DamianZaremba">
-                <img class="twitter" src="{% cdn_url /assests/images/twitter.png %}" alt="Twitter" />
-              </a>
-              <a href="https://github.com/DamianZaremba">
-                <img class="github" src="{% cdn_url /assests/images/github.png %}" alt="GitHub" />
-              </a>
-              <a href="http://feeds.feedburner.com/DamianZaremba">
-                <img class="rss" src="{% cdn_url /assests/images/rss.png %}" alt="RSS" />
-              </a>
-            </div>
+          <div class="social-icons navbar-right visible-md visible-lg">
+            <a href="http://twitter.com/DamianZaremba">
+              <img class="twitter" src="{% cdn_url /assests/images/twitter.png %}" alt="Twitter" />
+            </a>
+            <a href="https://github.com/DamianZaremba">
+              <img class="github" src="{% cdn_url /assests/images/github.png %}" alt="GitHub" />
+            </a>
+            <a href="http://feeds.feedburner.com/DamianZaremba">
+              <img class="rss" src="{% cdn_url /assests/images/rss.png %}" alt="RSS" />
+            </a>
           </div>
         </div>
       </div>
